feat: add comprehensive theme variables for light and dark modes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 REFACTORING_SUMMARY.md
+COLOR_PALETTE_REFERENCE.md
+CSS_MIGRATION_EXAMPLES.md
+HTML_INTEGRATION_GUIDE.html
+IMPLEMENTATION_SUMMARY.md
+QUICK_START.md
+THEME_VARIABLES_GUIDE.md
